# be/src/routes/index.js
@@ -6,5 +6,6 @@ const router = express.Router();
 router.use("/access", require("./access"));
 router.use("/user", require("./user"));
 router.use("/admin", require("./admin"));
+router.use("/themes", require("./shopTheme"));
 
 module.exports = router;
